--- a/app/Resources/views/_includes/menu.html.twig
+++ b/app/Resources/views/_includes/menu.html.twig
@@ -1,25 +1,31 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">{% block menu_title %}Shows{% endblock %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'show_index' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('show_list') }}">Shows
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'show_create' %}active{% endif %}"">
+                <a class="nav-link" href="{{ path('show_create') }}">Create show
+                    <span class="sr-only">(current)</span>
+                </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'category_list' %}active{% endif %}"">
+                <a class="nav-link" href="{{ path('category_list') }}">Categories
+                    <span class="sr-only">(current)</span>
+                </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'category_create' %}active{% endif %}"">
+                <a class="nav-link" href="{{ path('category_create') }}">Create Category
+                    <span class="sr-only">(current)</span>
+                </a>
                 </li>
             </ul>
         </div>
