--- a/app/Resources/views/show/list.html.twig
+++ b/app/Resources/views/show/list.html.twig
@@ -1,24 +1,24 @@
-{%  extends "show/base.html.twig" %}
+{%  extends "base.html.twig" %}
 
 {% block pageHeading %}
     List of shows
 {% endblock %}
 
 {% block content %}
-    {% for i in 1..3 %}
     <!-- Blog Post -->
-    <div class="card mb-4">
-        <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-        <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-            <a href="#" class="btn btn-primary">Read More &rarr;</a>
-        </div>
-        <div class="card-footer text-muted">
-            Posted on January 1, 2017 by
-            <a href="#">Start Bootstrap</a>
-        </div>
-    </div>
+        {% for show in shows %}
+            <div class="card mb-4">
+                <img class="card-img-top" src="{{ asset('upload/'~show.mainPicture) }}" alt="Card image cap">
+                <div class="card-body">
+                    <h2 class="card-title">{{ show.name }}</h2>
+                    <p class="card-text">{{ show.abstract }}</p>
+                    <a href="{{ path("show_show", {'id': show.id}) }}" class="btn btn-primary">Read More &rarr;</a>
+                </div>
+                <div class="card-footer text-muted">
+                    Created on {{ show.releaseDate | date('Y-m-d') }} by {{ show.author }}
+                </div>
+            </div>
+
     {% endfor %}
 
     <!-- Pagination -->
