--- a/app/Resources/views/show/list.html.twig
+++ b/app/Resources/views/show/list.html.twig
@@ -8,18 +8,27 @@
     <!-- Blog Post -->
         {% for show in shows %}
             <div class="card mb-4">
-                <img class="card-img-top" src="{{ asset('upload/'~show.mainPicture) }}" alt="Card image cap">
-                <div class="card-body">
-                    <h2 class="card-title">{{ show.name }}</h2>
-                    <p class="card-text">{{ show.abstract }}</p>
-                    <a href="{{ path("show_show", {'id': show.id}) }}" class="btn btn-primary">Read More &rarr;</a>
-                </div>
-                <div class="card-footer text-muted">
-                    Created on {{ show.releaseDate | date('Y-m-d') }} by {{ show.author }}
-                </div>
+                {% if show.id is not null %}
+                    <img class="card-img-top" src="{{ asset("upload/" ~ show.mainPicture) }}" alt="Show picture">
+                    <div class="card-body">
+                        <h2 class="card-title">{{ show.name }}</h2>
+                        <p class="card-text">{{ show.abstract }}</p>
+                        <a href="{{ path("show_show", { 'id' : show.id}) }}" class="btn btn-primary">Read More &rarr;</a>
+                    </div>
+                {% else %}
+                    <img class="card-img-top" src="{{ show.mainPicture }}" alt="Show picture">
+                    <div class="card-body">
+                        <h2 class="card-title">{{ show.name }}</h2>
+                        <p class="card-text">{{ show.abstract }}</p>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Created on {{ show.releaseDate | date('Y-m-d') }} by {{ show.author }}
+                    </div>
+                {% endif %}
             </div>
-
-    {% endfor %}
+        {% else %}
+            <div class="text-center">There is no show to display ...</div>
+        {% endfor %}
 
     <!-- Pagination -->
     <ul class="pagination justify-content-center mb-4">
