Bug Fix when N/A

--- a/app/Resources/views/show/list.html.twig
+++ b/app/Resources/views/show/list.html.twig
@@ -21,9 +21,9 @@
                         <h2 class="card-title">{{ show.name }}</h2>
                         <p class="card-text">{{ show.abstract }}</p>
                     </div>
-                    <div class="card-footer text-muted">
+                    {#<div class="card-footer text-muted">
                         Created on {{ show.releaseDate | date('Y-m-d') }} by {{ show.author }}
-                    </div>
+                    </div>#}
                 {% endif %}
             </div>
         {% else %}
