--- a/app/Resources/views/_includes/menu.html.twig
+++ b/app/Resources/views/_includes/menu.html.twig
@@ -12,21 +12,40 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'show_create' %}active{% endif %}"">
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'show_create' %}active{% endif %}">
                 <a class="nav-link" href="{{ path('show_create') }}">Create show
                     <span class="sr-only">(current)</span>
                 </a>
                 </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'category_list' %}active{% endif %}"">
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'category_list' %}active{% endif %}">
                 <a class="nav-link" href="{{ path('category_list') }}">Categories
                     <span class="sr-only">(current)</span>
                 </a>
                 </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'category_create' %}active{% endif %}"">
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'category_create' %}active{% endif %}">
                 <a class="nav-link" href="{{ path('category_create') }}">Create Category
                     <span class="sr-only">(current)</span>
                 </a>
                 </li>
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_create' %}active{% endif %}">
+                <a class="nav-link" href="{{ path('user_create') }}">Create User
+                    <span class="sr-only">(current)</span>
+                </a>
+                </li>
+                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_list' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('user_list') }}">User List
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                {% if app.user %}
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'login_logout' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('login_logout') }}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'login_login' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('login_login') }}">Login</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
