Multiple show for User + bugfix user connection

--- a/app/Resources/views/show/show.html.twig
+++ b/app/Resources/views/show/show.html.twig
@@ -18,7 +18,7 @@
             </form>
         </div>
         <div class="card-footer text-muted">
-            Created on {{ show.releaseDate | date('Y-m-d') }} by {{ show.author }}
+            Created on {{ show.releaseDate | date('Y-m-d') }} by {{ show.author.lastname }}
         </div>
     </div>
 
