--- a/app/Resources/views/_includes/menu.html.twig
+++ b/app/Resources/views/_includes/menu.html.twig
@@ -2,7 +2,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">{% block menu_title %}Shows{% endblock %}</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -12,31 +13,35 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'show_create' %}active{% endif %}">
-                <a class="nav-link" href="{{ path('show_create') }}">Create show
-                    <span class="sr-only">(current)</span>
-                </a>
-                </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'show_create' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('show_create') }}">Create show
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                {% endif %}
                 <li class="nav-item {% if app.request.attributes.get('_route') == 'category_list' %}active{% endif %}">
-                <a class="nav-link" href="{{ path('category_list') }}">Categories
-                    <span class="sr-only">(current)</span>
-                </a>
-                </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'category_create' %}active{% endif %}">
-                <a class="nav-link" href="{{ path('category_create') }}">Create Category
-                    <span class="sr-only">(current)</span>
-                </a>
-                </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_create' %}active{% endif %}">
-                <a class="nav-link" href="{{ path('user_create') }}">Create User
-                    <span class="sr-only">(current)</span>
-                </a>
-                </li>
-                <li class="nav-item {% if app.request.attributes.get('_route') == 'user_list' %}active{% endif %}">
-                    <a class="nav-link" href="{{ path('user_list') }}">User List
+                    <a class="nav-link" href="{{ path('category_list') }}">Categories
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'category_create' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('category_create') }}">Create Category
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'user_create' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('user_create') }}">Create User
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item {% if app.request.attributes.get('_route') == 'user_list' %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('user_list') }}">User List
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                {% endif %}
                 {% if app.user %}
                     <li class="nav-item {% if app.request.attributes.get('_route') == 'login_logout' %}active{% endif %}">
                         <a class="nav-link" href="{{ path('login_logout') }}">Logout</a>
