--- a/app/Resources/views/login/login.html.twig
+++ b/app/Resources/views/login/login.html.twig
@@ -3,25 +3,30 @@
 {% block title %}Login{% endblock %}
 
 {% block bodyHTML %}
-
-    {% block error %}
-        {% if error is not null %}
-            {% if error.message == "Bad credentials." %}
-                <div class="alert alert-danger">
+    <div class="login-box">
+        {% block error %}
+            {% if error is not null %}
+                {% if error.message == "Bad credentials." %}
+                    <div class="alert alert-danger">
                         Wrong password or email. Check inputs and retry.
-                </div>
+                    </div>
+                {% endif %}
             {% endif %}
-        {% endif %}
-    {% endblock %}
+        {% endblock %}
+        <div class="login-container">
+            <form action="{{ path('login_check') }}" method="POST">
 
-    <form action="{{ path('login_check') }}" method="POST">
-        <label for="email">Email </label>
-        <input name="email" id="email" type="text" class="form-control" value="{{ lastUsername }}"/>
+                <label for="email">Email </label>
+                <input name="email" id="email" type="text" class="form-control" value="{{ lastUsername }}"/>
 
-        <label for="password">Password </label>
-        <input name="password" id="password" type="password" class="form-control"/>
+                <label for="password">Password </label>
+                <input name="password" id="password" type="password" class="form-control"/>
 
-        <button type="submit" class="btn btn-primary">Log in</button>
-    </form>
+                <div class="login-container-button">
+                    <button type="submit" class="btn btn-primary login-button">Log in</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
